test/golden/importstr-nonexistent.jsonnet
importstr "this file does not exist"
